sumo/tests/sumo/extended/emitter/errors/xml/missing_element_end2/errors.sumo
Error: Expected end of tag 'vtypedistelem'
 In file 'input_definition.def.xml'
 At line/column 18/3.

Quitting (on error).
